--- a/20day/nanum-main.html
+++ b/20day/nanum-main.html
@@ -9,12 +9,12 @@
 <body id="nanum-main">
     <div id="header">
         <h1 title="나눔복지관">
-            <a href="#">
+            <a href="nanum-main.html">
                 <img src="image/log.png" alt="나눔복지관">
             </a>
         </h1>
         <ul class="gnb">
-            <li title="home"><a href="#">HOME</a></li>
+            <li title="home"><a href="nanum-main.html">HOME</a></li>
             <li title="login"><a href="#">LOGIN</a></li>
             <li title="join"><a href="#">JOIN</a></li>
             <li title="contact us"><a href="#">CONTACT US</a></li>
@@ -35,7 +35,7 @@
             <li><a href="#">자원봉사안내</a></li>
             <li><a href="#">커뮤니티</a>
                 <ul class="subMenu">
-                    <li><a href="#">공지사항</a></li>
+                    <li><a href="nanum-bbs.html">공지사항</a></li>
                     <li><a href="#">자유게시판</a></li>
                     <li><a href="#">복지뉴스</a></li>
                     <li><a href="#">복지자료실</a></li>
@@ -66,14 +66,27 @@
             </ul>
         </div>
         <div class="conCenter">
-            conCenter
+            <h2>
+                <img src="images/tit_1.gif" alt="복지관 갤러리">
+            </h2>
+            <ul>
+                <li><a href="#"><img src="images/img2.gif" alt="img2"></a></li>
+                <li><a href="#"><img src="images/img2.gif" alt="img2"></a></li>
+                <li><a href="#"><img src="images/img2.gif" alt="img2"></a></li>
+            </ul>
         </div>
         <div class="conRight">
-            conCenter
+            <h2>
+                <img src="images/tit_2.gif" alt="비디오">
+            </h2>
+            <video width="250" height="auto" controls muted autoplay loop>
+                <source src="./2013.mp4" type="video/mp4">
+                <source src="./2013.ogv" type="video/ogv">
+                <source src="./2013.webm" type="video/webm">
+            </video>
         </div>
     </div>
     <div id="footer1">
-
     </div>
     <div id="footer2">
         <p class="footer-left">
@@ -85,3 +98,13 @@
     </div>    
 </body>
 </html>
+<!-- 
+video 대신 embed를 넣어도 된다.
+
+<iframe src="파일경로" width="100" height="100" frameborder="0" scrolling="no">
+</iframe>
+현재 열려진 분서내에 다른 문서를 넣을 수 있다.
+width="100" height="100" -> 100%로 안가져오면 잘린다.
+위 그대로 써야 한다.
+요즘 많이 쓰임.
+-->
