--- a/20day/nanum-bbs.html
+++ b/20day/nanum-bbs.html
@@ -11,12 +11,12 @@
 <div id="header">
     <div class="header-box">
         <h1 title="나눔복지관">
-            <a href="#">
+            <a href="nanum-main.html">
                 <img src="image/log.png" alt="나눔복지관">
             </a>
         </h1>
         <ul class="gnb">
-            <li title="home"><a href="#">HOME</a></li>
+            <li title="home"><a href="nanum-main.html">HOME</a></li>
             <li title="login"><a href="#">LOGIN</a></li>
             <li title="join"><a href="#">JOIN</a></li>
             <li title="contact us"><a href="#">CONTACT US</a></li>
@@ -50,7 +50,7 @@
     </div>
     <div class="right">
         <div class="location">
-            <a href="#">HOME</a> >
+            <a href="nanum-main.html">HOME</a> >
             <a href="nanum-bbs.html">COMMUNITY</a> > 
             <a href="nanum-bbs.html"><strong>공지사항</strong></a>
         </div>
