--- a/22day/contact-유희연.html
+++ b/22day/contact-유희연.html
@@ -9,18 +9,20 @@
 <body id="oneCollayout">
     <div id="wrapper">   
         <div id="header">            
-            <h1>More than Doodles</h1>
-            <ul class="lnb">
-                <li><a href="#">홈</a></li>
-                <li><a href="#">사이트 소개</a></li>
-                <li><a href="#">뉴스</a></li>
-                <li><a href="#">인터뷰</a></li>
-                <li><a href="#">갤러리</a></li>
-                <li><a href="#">구인</a></li>
-                <li><a href="#">포럼</a></li>
-                <li><a href="#">멤버 소개</a></li>
-                <li><a href="#">연락정보</a></li>
-            </ul>
+            <h1 title="More than Doodles">More than Doodles</h1>
+            <nav class="lnb">
+                <ul>
+                    <li><a href="#">홈</a></li>
+                    <li><a href="#">사이트 소개</a></li>
+                    <li><a href="#">뉴스</a></li>
+                    <li><a href="#">인터뷰</a></li>
+                    <li><a href="#">갤러리</a></li>
+                    <li><a href="#">구인</a></li>
+                    <li><a href="#">포럼</a></li>
+                    <li><a href="#">멤버 소개</a></li>
+                    <li><a href="#">연락정보</a></li>
+                </ul>
+            </nav>
         </div>
         <div id="primaryContent">
             <div class="box">
@@ -34,7 +36,11 @@
                     </h3>
                     <p>
                         여러분이 보내주시는 모든 의견을 최대한 반영하고 있습니다. 전화나 아래 질문 보내기 기능을 이용하셔서 연락을 주셔도 좋고, 아니면 저희 회사로 직접 방문해 주세요. 언제나 즐거운 분위기로 여러분을 맞이하겠습니다. 운영시간은 매주 월요일부터 금요일까지 오전 9시부터 오후 7시까지입니다.
-                        <p><em>서울 강남구 신사동 111-111 두들타워 8층</em></p>
+                    </p>
+                    <p class="addresText">
+                        <strong>
+                            <em>서울 강남구 신사동 111-111 두들타워 8층</em>
+                        </strong>
                     </p>
                 </div>
             </div>
@@ -44,22 +50,25 @@
                     <h3>
                         질문 보내기
                     </h3>
-                    <form>
-                        <div class="formsection">
-                            <label for="email">이메일:</label>
-                            <input type="email" placeholder="me@site.com">
-                        </div>
-                        <div class="formsection">
-                            <label for="title">제목:</label>
-                            <input type="text" placeholder="질문입니다.">
-                        </div>
-                        <div class="formsection">
-                            <label for="self-introduction" class="introduction">본문:</label>
-                            <textarea rows="6" cols="35" placeholder="본문 내용을 입력하세요!"></textarea>
-                        </div>
-                        <div class="formsection">
-                            <input type="submit" value="메시지 발송">
-                        </div>
+                    <form method="post">
+                        <ul>
+                            <li>
+                                <label for="u-email"><strong>이메일:</strong></label>
+                                <input type="email" id="u-email" placeholder="me@site.com" size="30" required>
+                            </li>
+                            <li>
+                                <label for="titleText"><strong>제목:</strong></label>
+                                <input type="text" id="titleText" placeholder="질문입니다." size="30">
+                            </li>
+                            <li>
+                                <label for="bodytext"><strong>본문:</strong></label>
+                                <textarea rows="6" cols="35" id="bodytext" placeholder="본문 내용을 입력하세요!"></textarea>
+                            </li>
+                            <li>
+                                <input type="submit" value="메시지 발송">
+                            </li>
+                        </ul>
+                    </form>
                 </div>
             </div>
             <div class="box">
@@ -73,10 +82,13 @@
                     </p>
                 </div>
             </div>
+        </div>
         <div id="footer">
-            <a href="#">XHTML</a>
-            <a href="#">CSS</a>
-            <a href="#">Simon Collison 2005</a>
+            <p>
+                <a href="#">XHTML</a>
+                <a href="#">CSS</a>
+                <a href="#">Simon Collison 2005</a>
+            </p>
         </div>
     </div>
 </body>
