--- a/23day/gallery_layout.html
+++ b/23day/gallery_layout.html
@@ -39,7 +39,7 @@
             <div class="box">
                 <h2>갤러리 목록</h2>
                 <div class="cbside">
-                    <ul>
+                    <ul class="sideMenu">
                         <li><a href="#">Jon Burgerman</a></li>
                         <li><a href="#">Richard may</a></li>
                         <li><a href="#">McFaul</a></li>
@@ -57,13 +57,13 @@
                         <fieldset>
                             <legend>사이트 검색</legend>
                             <label for="u-search">사이트 검색</label>
-                            <input type="search" id="u-search" placeholder="박수만" size="8">
+                            <input type="search" id="u-search" placeholder="박수만" size="9">
                             <input type="image" src="./images/go.gif" alt="사이트로 이동하기">
                         </fieldset>
                         <fieldset>
                             <legend>메일형 리스트 가입</legend>
                             <label for="accession">메일형 리스트 가입</label>
-                            <input type="email" id="accession" placeholder="me@site.com" size="8">
+                            <input type="email" id="accession" placeholder="me@site.com" size="9">
                             <input type="image" src="./images/go.gif" alt="가입하기">
                         </fieldset>
                         <p>
@@ -83,36 +83,38 @@
                     <h3>
                         1st KOREA 웹표준 데이 2006 갤러리
                     </h3>
-                    <p><span>2006년 11월 2일 작성</span></p>
+                    <span>2006년 11월 2일 작성</span>
                     <p>
-                        이 갤러리는 최근에 열렸던 <a href="./images/external.gif">1st Korea Web Standards Day</a> 모임의 사진입니다. Css Design Korea는 웹 표준 관련 국내 유일의 커뮤니티로서, 작년 봄 오픈 이래 수백명의 회원들이 웹 표준 관련 다양한 논의를 활발하게 진행하고 있으며, 실무자들 중심으로 기술적인 QnA와 국내/외 웹표준 관련 동향을 논하는 포럼 형식을 취하고 있습니다.
+                        이 갤러리는 최근에 열렸던 <a href="./images/external.gif" class="webday">1st Korea Web Standards Day</a> 모임의 사진입니다. Css Design Korea는 웹 표준 관련 국내 유일의 커뮤니티로서, 작년 봄 오픈 이래 수백명의 회원들이 웹 표준 관련 다양한 논의를 활발하게 진행하고 있으며, 실무자들 중심으로 기술적인 QnA와 국내/외 웹표준 관련 동향을 논하는 포럼 형식을 취하고 있습니다.
                     </p>
                     <div class="photoGallery">
-                        <div class="thumnail"><img src="./images/img_8402.jpg" alt="photo"></div>
-                    </div>
-                    <div class="photoGallery">
-                        <div class="thumnail"><img src="./images/img_8409.jpg" alt="photo"></div>
-                    </div>
-                    <div class="photoGallery">
-                        <div class="thumnail"><img src="./images/img_8410.jpg" alt="photo"></div>
-                    </div>
-                    <div class="photoGallery">
-                        <div class="thumnail"><img src="./images/img_8411.jpg" alt="photo"></div>
-                    </div>
-                    <div class="photoGallery">
-                        <div class="thumnail"><img src="./images/img_8418.jpg" alt="photo"></div>
-                    </div>
-                    <div class="photoGallery">
-                        <div class="thumnail"><img src="./images/img_8444.jpg" alt="photo"></div>
-                    </div>
-                    <div class="photoGallery">
-                        <div class="thumnail"><img src="./images/img_8451.jpg" alt="photo"></div>
-                    </div>
-                    <div class="photoGallery">
-                        <div class="thumnail"><img src="./images/img_8453.jpg" alt="photo"></div>
-                    </div>
-                    <div class="photoGallery">
-                        <div class="thumnail"><img src="./images/p1030900.jpg" alt="photo"></div>
+                        <div class="thumnail">
+                            <img src="images/img_8402.jpg" alt="인물이미지1">
+                        </div>                  
+                        <div class="thumnail">
+                            <img src="images/img_8409.jpg" alt="인물이미지2">
+                        </div>
+                        <div class="thumnail">
+                            <img src="images/img_8410.jpg" alt="인물이미지3">
+                        </div>
+                        <div class="thumnail">
+                            <img src="images/img_8411.jpg" alt="인물이미지4">
+                        </div>
+                        <div class="thumnail">
+                            <img src="images/img_8418.jpg" alt="인물이미지5">
+                        </div>
+                        <div class="thumnail">
+                            <img src="images/img_8444.jpg" alt="인물이미지6">
+                        </div>
+                        <div class="thumnail">
+                            <img src="images/img_8451.jpg" alt="인물이미지7">
+                        </div>
+                        <div class="thumnail">
+                            <img src="images/img_8453.jpg" alt="인물이미지8">
+                        </div>
+                        <div class="thumnail">
+                            <img src="images/p1030900.jpg" alt="인물이미지9" width="100" height="66">
+                        </div>
                     </div>
                     <div class="PageN">
                         Page 1 of 4 :
