--- a/24day/gallery.html
+++ b/24day/gallery.html
@@ -12,15 +12,15 @@
         <h1 title="MORE THAN DOODLES">MORE THAN DOODLES</h1>
         <nav class="lnb">
             <ul>
-                <li><a href="#">홈</a></li>
-                <li><a href="#">사이트소개</a></li>
-                <li><a href="#">뉴스</a></li>
-                <li><a href="#">인터뷰</a></li>
-                <li><a href="#">갤러리</a></li>
-                <li><a href="#">구인</a></li>
-                <li><a href="#">포럼</a></li>
-                <li><a href="#">멤버소개</a></li>
-                <li><a href="#">연락정보</a></li>  
+                <li><a href="index.html">홈</a></li>
+                    <li><a href="#">사이트 소개</a></li>
+                    <li><a href="#">뉴스</a></li>
+                    <li><a href="#">인터뷰</a></li>
+                    <li><a href="gallery.html">갤러리</a></li>
+                    <li><a href="#">구인</a></li>
+                    <li><a href="#">포럼</a></li>
+                    <li><a href="#">멤버 소개</a></li>
+                    <li><a href="contact-유희연.html">연락정보</a></li>
             </ul>
         </nav>       
     </div>
