--- a/html5/02/mobile.html
+++ b/html5/02/mobile.html
@@ -3,7 +3,113 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>모바일 레이아웃</title>
+    <title>모바일레이아웃</title>
+    <style>
+        /*basic style*/
+        *{margin:0; padding:0;}
+        body{font-family: 'Time New Roman',serif;}
+        ul{list-style:none;}
+        a,
+        a:link,
+        a:active,
+        a:visited{
+            color:#000; 
+            text-decoration: none;
+        }
+        input{display: none;}
+    </style>
+    <style>
+        /*header & nav style*/
+        #mainHeader{
+            height: 45px;
+            background: url(image/header_background.png)repeat-x 0 0;
+            text-align: center;
+            position: relative;
+        }
+        #mainHeader>h1{color:#fff;}
+        .mbtn,
+        label{ position: absolute; text-indent: -9999px;}
+        .mbtn{
+            left:5px; 
+            top:7px; 
+            width:62px; 
+            height: 32px; 
+            background: url(image/header_left_button.png)no-repeat 0 0;
+        }
+        label{
+            right:5px; 
+            top:7px;
+            width:32px; 
+            height: 32px; 
+            background: url(image/header_right_button.png)no-repeat 0 0;
+        }
+        #toggle+#wrap>.toggle-wrap{display: none;}
+        #toggle:checked+#wrap>.toggle-wrap{display:block;}
+        .toggle-wrap{padding:15px; background: #000;}
+        .toggle{padding:5px; background: #fff;}
+        .toggle>ul{overflow: hidden;}
+        .toggle>ul>li{float:left;}
+        .toggle>ul>li>a{
+            width:100px;
+            display: block;
+            text-align: center;
+            color:#666;
+        }
+        .top-gnb{
+            background: #b42111;
+            border-bottom: 1px solid #000;
+            overflow: hidden;
+        }
+        .top-gnb>div{
+            float: left;
+            width: 25%;
+            height: 35px;
+        }
+        .top-gnb>div>a{
+            color: #fff;
+            text-align: center;
+            display: block;
+            line-height: 35px;
+        }
+        .bottom-gnb{
+            display: table; /*표의 속성으로 전환하는 기능*/
+            width: 100%;
+            border-bottom: 1px solid #000;
+        }
+        .bottom-gnb>div{
+            display: table-cell; /*테이블의 칸으로 인식, 칸의 너비를 자동으로 맞춤*/
+            position: relative;
+        }
+        .bottom-gnb>div>a{
+            line-height: 35px;
+            display: block;
+            text-align: center;
+            color: #666;
+        }
+        .bottom-gnb>div>a::before{
+            content: '';
+            width: 1px;
+            height: 15px;
+            background: #666;
+            position: absolute;
+            left: 0;
+            top: 10px;
+        }
+        .bottom-gnb>div:first-child>a::before{width: 0;}
+    </style>
+    <style>
+        /* content & footer style */
+        #contents{font-size: 80%;}
+        #contents>header{padding: 20px;}
+        #contents>article{padding: 10px;}
+        footer{
+            padding: 10px;
+            border-top: 1px solid #000;
+            text-align: center;
+            line-height: 26px;
+            font-size: 65%;
+        }
+    </style>
 </head>
 <body>
     <input type="checkbox" id="toggle">
@@ -13,7 +119,6 @@
             <a href="#" class="mbtn">Main</a>
             <label for="toggle">Toggle</label>
         </header>
-
         <div class="toggle-wrap">
             <div class="toggle">
                 <ul>
@@ -28,58 +133,64 @@
                 </ul>
             </div>
         </div>
-        <!-- width에 고정값을 지정하면 유동적으로 너비 조절이 안된다. -->
+        <!--width에 고정값을 지정하면 유동적으로 너비가 조절이 안됨-->
 
         <nav class="top-gnb">
             <div><a href="#">버튼</a></div>
             <div><a href="#">버튼</a></div>
             <div><a href="#">버튼</a></div>
             <div><a href="#">버튼</a></div>
-        </nav>    
-        <!-- %로 지정을 함. 짝수일때는 %로 계산하기 쉽다. -->
+        </nav>
+        <!--%로 지정을 합니다. 짝수일때는 %로 계산하기 쉽다-->
 
-        <nav class="button-gnb">
+        <nav class="bottom-gnb">
             <div><a href="#">버튼</a></div>
             <div><a href="#">버튼</a></div>
             <div><a href="#">버튼</a></div>
             <div><a href="#">버튼</a></div>
             <div><a href="#">버튼</a></div>
-        </nav>    
-        <!-- display 속성으로 값을 table로 전환한다.  -->
-        
+        </nav>
+        <!--display속성으로 값을 table로 전환합니다-->
+
         <section id="contents">
             <header>
                 <h2>Lorem ipsum</h2>
                 <time>2025-06-30</time>
             </header>
+
             <article>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in magna libero. Sed nec pharetra nunc. Proin eget magna id ipsum eleifend cursus sit amet nec lectus. Nunc quis 
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in magna libero. Sed nec pharetra nunc. Proin eget magna id ipsum eleifend cursus sit amet nec lectus. Nunc quis lacus magna. Aliquam blandit, sapien ut viverra fermentum, elit tortor ornare nisi, in luctus sem massa pulvinar turpis. Cras tincidunt dictum urna ut ultricies.
                 </p>
                 <br>
+
                 <p>
-                    lacus magna. Aliquam blandit, sapien ut viverra fermentum, elit tortor ornare nisi, in luctus sem massa pulvinar turpis. Cras tincidunt dictum urna ut ultricies. Nullam diam nibh, pellentesque non laoreet ut, bibendum nec mauris. Maecenas pulvinar 
+                    Nullam diam nibh, pellentesque non laoreet ut, bibendum nec mauris. Maecenas pulvinar porttitor laoreet. Vivamus bibendum purus nisl, eget aliquam lectus. Maecenas justo libero, euismod sit amet suscipit eu, vulputate eget neque. Aliquam quam est, blandit nec iaculis non, suscipit vel nunc.
                 </p>
                 <br>
+
                 <p>
-                    porttitor laoreet. Vivamus bibendum purus nisl, eget aliquam lectus. Maecenas justo libero, euismod sit amet suscipit eu, 
+                    Proin et odio aliquam erat pharetra accumsan et quis neque. Vivamus interdum accumsan leo eu adipiscing. Integer accumsan elit non turpis faucibus porttitor. Aliquam scelerisque nisi et turpis pretium at ultricies turpis pharetra.
                 </p>
                 <br>
+
                 <p>
-                    vulputate eget neque. Aliquam quam est, blandit nec iaculis non, suscipit vel nunc. Proin et odio aliquam erat pharetra accumsan et quis neque. Vivamus interdum accumsan leo eu adipiscing.  
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in magna libero. Sed nec pharetra nunc. Proin eget magna id ipsum eleifend cursus sit amet nec lectus. Nunc quis lacus magna. Aliquam blandit, sapien ut viverra fermentum, elit tortor ornare nisi, in luctus sem massa pulvinar turpis. Cras tincidunt dictum urna ut ultricies.
                 </p>
                 <br>
+
                 <p>
-                    Integer accumsan elit non turpis faucibus porttitor. Aliquam scelerisque nisi et turpis pretium at ultricies turpis pharetra. 
+                    Proin et odio aliquam erat pharetra accumsan et quis neque. Vivamus interdum accumsan leo eu adipiscing. Integer accumsan elit non turpis faucibus porttitor. Aliquam scelerisque nisi et turpis pretium at ultricies turpis pharetra.
                 </p>
                 <br>
             </article>
         </section>
 
         <footer id="mainFooter">
-            <p>HTML5+CSS3 Basic</p>
-            <p><em>Website Layout Basic</em></p>
+            <p>HTML5 + CSS3 Basic</p>
+			<p><em>Website Layout Basic</em></p>
         </footer>
     </div>
+    
 </body>
 </html>
