--- a/html5/03/grid.html
+++ b/html5/03/grid.html
@@ -23,6 +23,124 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in magna libero. Sed nec pharetra nunc. Proin eget magna id ipsum eleifend cursus sit amet nec lectus. Nunc quis lacus magna. 
         </p>
     </article>
+    <!-- 2칸짜리 6/6 -->
+
+    <article class="grid_4">
+        <h2>Lorem ipsum dolor sit amet</h2>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in magna libero. Sed nec pharetra nunc. Proin eget magna id ipsum eleifend cursus sit amet nec lectus. Nunc quis lacus magna. 
+        </p>
+    </article>
+    <article class="grid_4">
+        <h2>Lorem ipsum dolor sit amet</h2>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in magna libero. Sed nec pharetra nunc. Proin eget magna id ipsum eleifend cursus sit amet nec lectus. Nunc quis lacus magna. 
+        </p>
+    </article>
+    <article class="grid_4">
+        <h2>Lorem ipsum dolor sit amet</h2>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in magna libero. Sed nec pharetra nunc. Proin eget magna id ipsum eleifend cursus sit amet nec lectus. Nunc quis lacus magna. 
+        </p>
+    </article>
+    <!-- 3칸짜리 4/4/4 -->
+
+    <article class="grid_3">
+        <h2>Lorem ipsum dolor sit amet</h2>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in magna libero. Sed nec pharetra nunc. Proin eget magna id ipsum eleifend cursus sit amet nec lectus. Nunc quis lacus magna. 
+        </p>
+    </article>
+    <article class="grid_3">
+        <h2>Lorem ipsum dolor sit amet</h2>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in magna libero. Sed nec pharetra nunc. Proin eget magna id ipsum eleifend cursus sit amet nec lectus. Nunc quis lacus magna. 
+        </p>
+    </article>
+    <article class="grid_3">
+        <h2>Lorem ipsum dolor sit amet</h2>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in magna libero. Sed nec pharetra nunc. Proin eget magna id ipsum eleifend cursus sit amet nec lectus. Nunc quis lacus magna. 
+        </p>
+    </article>
+    <article class="grid_3">
+        <h2>Lorem ipsum dolor sit amet</h2>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in magna libero. Sed nec pharetra nunc. Proin eget magna id ipsum eleifend cursus sit amet nec lectus. Nunc quis lacus magna. 
+        </p>
+    </article>
+    <!-- 4칸짜리 3/3/3/3 -->
+
+    <article class="grid_2">
+        <h2>Lorem ipsum dolor sit amet</h2>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in magna libero. Sed nec pharetra nunc. Proin eget magna id ipsum eleifend cursus sit amet nec lectus. Nunc quis lacus magna. 
+        </p>
+    </article>
+    <article class="grid_2">
+        <h2>Lorem ipsum dolor sit amet</h2>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in magna libero. Sed nec pharetra nunc. Proin eget magna id ipsum eleifend cursus sit amet nec lectus. Nunc quis lacus magna. 
+        </p>
+    </article>
+    <article class="grid_2">
+        <h2>Lorem ipsum dolor sit amet</h2>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in magna libero. Sed nec pharetra nunc. Proin eget magna id ipsum eleifend cursus sit amet nec lectus. Nunc quis lacus magna. 
+        </p>
+    </article>
+    <article class="grid_3">
+        <h2>Lorem ipsum dolor sit amet</h2>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in magna libero. Sed nec pharetra nunc. Proin eget magna id ipsum eleifend cursus sit amet nec lectus. 
+        </p>
+    </article>
+    <article class="grid_3">
+        <h2>Lorem ipsum dolor sit amet</h2>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in magna libero. Sed nec pharetra nunc. Proin eget magna id ipsum eleifend cursus sit amet nec lectus. 
+        </p>
+    </article>
+    <!-- 5칸짜리 3/3/2/2/2 -->
+    
+    <article class="grid_2 clear" >
+        <h2>Lorem ipsum dolor sit amet</h2>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in magna libero. Sed nec pharetra nunc. Proin eget magna id ipsum eleifend cursus sit amet nec lectus. Nunc quis lacus magna. 
+        </p>
+    </article>
+    <article class="grid_2">
+        <h2>Lorem ipsum dolor sit amet</h2>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in magna libero. Sed nec pharetra nunc. Proin eget magna id ipsum eleifend cursus sit amet nec lectus. Nunc quis lacus magna. 
+        </p>
+    </article>
+    <article class="grid_2">
+        <h2>Lorem ipsum dolor sit amet</h2>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in magna libero. Sed nec pharetra nunc. Proin eget magna id ipsum eleifend cursus sit amet nec lectus. Nunc quis lacus magna. 
+        </p>
+    </article>
+    <article class="grid_2">
+        <h2>Lorem ipsum dolor sit amet</h2>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in magna libero. Sed nec pharetra nunc. Proin eget magna id ipsum eleifend cursus sit amet nec lectus. Nunc quis lacus magna. 
+        </p>
+    </article>
+    <article class="grid_2">
+        <h2>Lorem ipsum dolor sit amet</h2>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in magna libero. Sed nec pharetra nunc. Proin eget magna id ipsum eleifend cursus sit amet nec lectus. Nunc quis lacus magna. 
+        </p>
+    </article>
+    <article class="grid_2">
+        <h2>Lorem ipsum dolor sit amet</h2>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in magna libero. Sed nec pharetra nunc. Proin eget magna id ipsum eleifend cursus sit amet nec lectus. Nunc quis lacus magna. 
+        </p>
+    </article>
+    <!-- 6칸짜리 2/2/2/2/2/2 -->
+
     <footer class="grid_12">
         <p>footer</p>
     </footer>
