--- a/html5/03/media3.html
+++ b/html5/03/media3.html
@@ -4,32 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>미디어쿼리 작성 방법</title>
-    <style>
-        /* 모바이 767 이하로 규정 */
-        /* 반응형은 body가 아닌 html이 우선임 */
-        @media screen and (max-width:767px){
+    <style>        
+       /* 세로 방향 */
+        @media screen and (max-width:767px) and (orientation: portrait){
             html{
-                background: red;
+                background: gray;
                 color: #fff;
                 font-weight: bold;
             }
         }
 
-        /* 태블릿 768~959 */
-        @media screen and (min-width:768px) and (max-width:959px){
+        /* 가로 방향 */
+        /* 세로보다 가로가 작을 때 */
+        @media screen and (max-width:767px) and (orientation: landscape){
             html{
-                background: purple;
+                background: skyblue;
                 color: #fff;
                 font-weight: normal;
-            }
-        }
-        
-        /* 데스크탑 960이상 */
-        @media screen and (min-width:960px){
-            html{
-                background: yellowgreen;
-                color: #fff;
-                font-style: italic;
             }
         }
     </style>
