--- a/html5/03/media2.html
+++ b/html5/03/media2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>미디어쿼리 작성 방법</title>
     <style>
-        /* 모바이 767 이하로 규정 */
+        /* 모바일 767 이하로 규정 */
         /* 반응형은 body가 아닌 html이 우선임 */
         @media screen and (max-width:767px){
             html{
