--- a/html5/04/icox.html
+++ b/html5/04/icox.html
@@ -13,7 +13,7 @@
             <img src="images/logo.svg" alt="아이콕스 로고">
         </a>
     </h1>
-    <form method="post" name="sform" if="sform">
+    <form method="post" name="sform" id="sform">
         <fieldset>
             <legend class="skip">도서검색</legend>
             <label class="skip" for="sbox">도서 검색어 입력</label>
