--- a/html5/04/icox.html
+++ b/html5/04/icox.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>icox 반응형웹문서 작성하기</title>
     <link rel="stylesheet" href="css/master.css">
+    <script src="js/jquery.js"></script> <!--1. 제이쿼리 라이브러리 넣기-->
+    <script>
+        //2. wrapper 선언하기(스크립트 묶어주는 용도) 
+        // 간략형 : $(function(){실행할 문장작성;})
+        $(function(){
+            ;
+        })
+    </script>
 </head>
 <body>
 <header id="firstHeader">
@@ -98,3 +106,12 @@
 </header>    
 </body>
 </html>
+<!-- 
+웹문서에서 동적인 요소를 제작할때는 javascript를 사용한다.
+
+1. </head> 위에 <script>내용작성</script> 할수도있고
+2. <body> 사이에 <body><script>내용작성</script></body> 내용 작성할 수도 있다.
+
+자바스크립트 라이브러리 및 프레임 워크는 제이쿼리, 뷰, 앵글러, 리액트 등등이 있다.
+제이쿼리는 자바스크립트 라이브러리 이므로 맨 먼저 라이브러리 경로 지정을 해야한다.
+-->
