--- a/html5/04/icox.html
+++ b/html5/04/icox.html
@@ -11,18 +11,28 @@
         간략형 : $(function(){실행할 문장작성;})
         구문형식 : $('제어대상').메서드(); */
         $(function(){
+            //주메뉴에서 마우스를 호버했을 때 백그라운드와 '#lnb>ul>li>ul' 보임
             $('#lnb>ul>li>a').bind('mouseover focus', function(){
                 $('#lnb>ul>li>ul').hide(); //서브메뉴의 초기값
                 $('#lnb>ul>li>a').css({  //master.css / {}=그룹핑하는 것
                     'height':'29px', //'속성':'값',
                     'background':'none'
                 });
-                $('#lnb>ul>li>ul').show();
-                $('#lnb>ul>li>a').css({ 
+                $(this).next().show(); //this(=자기자신'#lnb>ul>li>a').next()(=그 다음요소)
+                $(this).css({ 
                     'height':'32px', 
                     'background':'url(images/over_icon.gif)no-repeat 50% 100%'
                 });
             });
+            //주메뉴에서 마우스를 아웃했을 때 안보이게 함
+            //mouseleave=아웃 / 이벤트가 1개일 때는 바로 써도됨. 위에는 이벤트가 2개여서 .bind를 함.
+            $('#lnb').mouseleave(function(){ 
+                $('#lnb>ul>li>ul').stop().slideUp(50); //slideUp=천천히 올라감 / ()안에는 데이터(값)가 들어감. 여기서는 50이 시간임. 
+                $('#lnb>ul>li>a').css({  
+                    'height':'29px', 
+                    'background':'none'    
+                });            
+            }); 
         });
     </script>
 </head>
