--- a/html5/04/icox.html
+++ b/html5/04/icox.html
@@ -368,6 +368,32 @@
             </div>
         </section>
     </div>
+    <div id="down-author">
+        <p>
+            <a href="">
+                <img src="images/down.gif" alt="도서 자료 및 부록">
+            </a>
+        </p>
+        <article id="author_column">
+            <h2>
+                <img src="images/autor_column.gif" alt="이달의 저자 칼럼">
+            </h2>
+            <ul>
+                <li>
+                    <video controls autoplay muted loop width="248" height="152">
+                        <source src="video/column.mp4" type="video/mp4">
+                        <source src="video/column.webm" type="video/webm">
+                    </video>
+                </li>
+                <li class="nscreen">
+                    <a href="#">
+                        <span>N-Screen 시대란?</span>
+                        최근 다양한 디바이스가 보급되면서 기기마다 서로 다른 해상도를 고려하지 않을 수 없게 되었습니다. 우리 주변만 보더라도 모바일 폰에서부터 태블릿, 데스크톱PC, 스마트TV등...
+                    </a>
+                </li>
+            </ul>
+        </article>
+    </div>
 </section>
 
 </body>
