--- a/html5/04/icox.html
+++ b/html5/04/icox.html
@@ -395,7 +395,29 @@
         </article>
     </div>
 </section>
-
+<footer id="realFooter">
+    <div class="foot">
+        <div>
+            <p>(주)ICOX 158-718 서울시 양천구 목1동 923-4 현대드림타워</p>
+            <p>대표이사:이기택 사업자 등록번호:000-000</p>
+            <small class="copy">
+                Copyright ⓒ 2011 Icox Education
+            </small>
+        </div>
+        <ul>
+            <li>
+                <a href="#">
+                    <img src="images/facebook.gif" alt="페이스북">
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="images/twitter.gif" alt="트위터">
+                </a>
+            </li>
+        </ul>
+    </div>
+</footer>
 </body>
 </html>
 <!-- 
