--- a/html5/04/icox.html
+++ b/html5/04/icox.html
@@ -94,7 +94,7 @@
 <header id="firstHeader">
     <h1>
         <a href="#">
-            <img src="images/logo.gif" alt="아이콕스 로고">
+            <img src="images/logo.svg" alt="아이콕스 로고">
         </a>
     </h1>
     <form method="post" name="sform" id="sform">
