--- a/html5/05/flex-5.html
+++ b/html5/05/flex-5.html
@@ -21,8 +21,8 @@
     }
     .box:nth-child(even){background: green;}
     #box1{margin-right: auto;}
-    #box4{margin-left: auto;}
-
+    #box3{margin-left: auto;}
+    .con2{justify-content: space-between;}
 
 </style>
 <body>
@@ -30,7 +30,11 @@
         <div class="box" id="box1">1</div>
         <div class="box" id="box2">2</div>
         <div class="box" id="box3">3</div>
-        <div class="box" id="box4">4</div>
+    </div>
+    <div class="container con2" >
+        <div class="box" id="box5">5</div>
+        <div class="box" id="box6">6</div>
+        <div class="box" id="box7">7</div>
     </div>
 </body>
 </html>
