--- a/html5/반응형웹/response.html
+++ b/html5/반응형웹/response.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/master.css">
     <script src="js/jquery-3.6.0.js"></script>
     <script src="js/jquery.scrolledFix.js"></script>
+    <script src="js/script.js"></script>
 </head>
 <body>
     <header>
@@ -41,7 +42,7 @@
         </h2>
         <ul>
             <li>
-                <img class="col-4" src="images/main-img-1-origin.jpg" width="296" alt="main-img-1" style="margin-bottom: 60px;">
+                <img class="col-4" src="images/main-img-1-origin.jpg" width="296" alt="main-img-1">
                 <div class="col-8 last">
                     <h4>Web Design studio :-)</h4>
                     <p>
@@ -50,7 +51,7 @@
                 </div>
             </li>
             <li class="clearfix">
-                <img class="col-8 last fr" src="images/main-img-2-origin.jpg" width="620" height="416" alt="main-img-2" style="margin-bottom: 60px;">
+                <img class="col-8 last fr" src="images/main-img-2-origin.jpg" width="620" height="416" alt="main-img-2">
                 <div class="col-4">
                     <h4>Did the design and teaching how to start?</h4>
                     <p>
@@ -103,10 +104,13 @@
         </p>
     </div>    
 </footer>
+<!-- 
+플러그인 사용할 때
 <script>
     $(function(){
         $('#header-bar').scrolledFix();
     })
-</script>
+</script> 
+-->
 </body>
 </html>
