--- a/html5/06/grid4.html
+++ b/html5/06/grid4.html
@@ -10,7 +10,7 @@
             display: grid;
             border: 1px solid #000;
             grid-template-columns:repeat(3, 1fr);
-            gap: 20px 30px
+            gap: 50px;
         }
 
         .items{
