--- a/html5/07/skew.html
+++ b/html5/07/skew.html
@@ -23,25 +23,21 @@
             transition: 1s;      
         }  
         .origin{perspective: 60px;}
-        .rotatex:hover{transform: rotateX(60deg);}
-        .rotatey:hover{transform: rotateY(50deg);}
-        .rotatez:hover{transform: rotateZ(50deg);}
-        .rotatexyz:hover{transform: rotate3d(2.5, 1.2, -1.5, 55deg)}
+        .skewx:hover{transform: skewX(30deg);}
+        .skewy:hover{transform: skewy(15deg);}
+        .skewxy:hover{transform: skew(-25deg, -15deg);}
     </style>
 </head>
 <body>
 <div class="container">
     <div class="origin">
-        <div class="rotatex"></div>
+        <div class="skewx"></div>
     </div>
     <div class="origin">
-        <div class="rotatey"></div>
+        <div class="skewy"></div>
     </div>
     <div class="origin">
-        <div class="rotatez"></div>
-    </div>
-    <div class="origin">
-        <div class="rotatexyz"></div>
+        <div class="skewxy"></div>
     </div>
 </div>   
 </body>
